--- a/packages/energy/geysers.yaml
+++ b/packages/energy/geysers.yaml
@@ -24,7 +24,10 @@ automation:
       - platform: template
         value_template: "{{ states('sensor.time') == (state_attr('input_datetime.main_geyser_on_time', 'timestamp') | int | timestamp_custom('%H:%M', False)) }}"
       - platform: time
-        at: '18:00:00'
+        at: '13:30:00'
+      - platform: numeric_state
+        entity_id: sensor.front_bathroom_geyser_power
+        below: '50'
     condition:
       - condition: state
         entity_id: timer.loadshedding_slot
@@ -34,6 +37,8 @@ automation:
         state: 'idle'
         for:
           hours: 6
+      - condition: template
+        value_template: "{{ ('02:00' <= states('sensor.time') <= '06:00') or ('12:00' <= states('sensor.time') < '18:05') }}"
     action:
     - service: timer.start
       data_template:
@@ -105,12 +110,14 @@ automation:
         value_template: "{{ states('sensor.time') == (state_attr('input_datetime.front_geyser_on_time', 'timestamp') | int | timestamp_custom('%H:%M', False)) }}"
       - platform: template
         value_template: "{{ states('sensor.time') == (state_attr('input_datetime.main_geyser_on_time', 'timestamp') | int | timestamp_custom('%H:%M', False)) }}"
+      - platform: time
+        at: '11:30:00'
     condition:
       - condition: state
         entity_id: timer.loadshedding_slot
         state: 'idle'
       - condition: template
-        value_template: "{{ ('04:00' <= states('sensor.time') <= '06:00' and states('input_boolean.guest') == 'on') or ('17:00' <= states('sensor.time') < '20:00') }}"
+        value_template: "{{ ('04:00' <= states('sensor.time') <= '06:00' and states('input_boolean.guest') == 'on') or ('11:00' <= states('sensor.time') < '18:05') }}"
       - condition: state
         entity_id: timer.front_geyser
         state: 'idle'
