--- a/packages/lights/light_motion_timers_back_lights.yaml
+++ b/packages/lights/light_motion_timers_back_lights.yaml
@@ -25,7 +25,7 @@ automation:
   - service: light.turn_on
     data:
       entity_id:
-        - light.outside_back_light
+        - light.outside_back
   - service: timer.start
     data:
       entity_id: timer.outsidebacklight
@@ -41,4 +41,4 @@ automation:
     service: light.turn_off
     data:
       entity_id:
-        - light.outside_back_light
+        - light.outside_back
